--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -29,7 +29,7 @@ body {
  */
 article,
 aside,
-/* footer, */
+footer,
 header,
 nav,
 section {
@@ -1249,7 +1249,7 @@ a.newer-posts:hover {
 }
 
 .page-footer {
-  display: -webkit-box;
+/*   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
@@ -1262,7 +1262,7 @@ a.newer-posts:hover {
           flex-wrap: wrap;
   padding-bottom: 30px;
   margin: 30px 0;
-  border-bottom: 1px solid #a0a0a0;
+  border-bottom: 1px solid #a0a0a0; */
 }
 
 .page-footer .page-share {
@@ -1284,7 +1284,7 @@ a.newer-posts:hover {
   transition: background-color .3s;
 }
 
-.page-footer .page-share a:first-child {
+/* .page-footer .page-share a:first-child {
   margin-left: 0;
 }
 
@@ -1304,7 +1304,7 @@ a.newer-posts:hover {
 
 .page-footer .page-tag a:hover {
   text-decoration: underline;
-}
+} */
 
 /* - - - - - - - - - - Tag Styles - - - - - - - - - - */
 .blog-tags {
