--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1000,7 +1000,7 @@ table tfoot td {
   margin: 0 0 10px;
 }
 
-.content-box {
+/*.content-box {
   padding: 20px;
   padding-left: 260px;
   display: -webkit-box;
@@ -1019,7 +1019,7 @@ table tfoot td {
   -webkit-align-items: stretch;
       -ms-flex-align: stretch;
           align-items: stretch;
-}
+}*/
 
 .contact .contact-title {
   position: relative;
@@ -1100,8 +1100,7 @@ footer .copyright {
   margin: 0;
 }
 
-.post {
-  width: 100%;
+.post  width: 100%;
   max-width: 100%;
   margin-bottom: 1.5rem;
   display: -webkit-box;
