--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1000,9 +1000,9 @@ table tfoot td {
   margin: 0 0 10px;
 }
 
-/*.content-box {
+.content-box {  
   padding: 20px;
-  padding-left: 260px;
+  padding-left: 260px; /*控制页面布局用，大概是中心部分距左侧距离*/
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -1019,7 +1019,7 @@ table tfoot td {
   -webkit-align-items: stretch;
       -ms-flex-align: stretch;
           align-items: stretch;
-}*/
+}
 
 .contact .contact-title {
   position: relative;
