--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -21,7 +21,7 @@ layout: main
       </header>
       {{content | markdownify}}
     <div class="page-footer">
-        <img src={{ "/assets/img/row/" | prepend: site.baseurl | append : page.img}} alt="{{page.title}}">
+        <img src={{ "/assets/img/row/" | prepend: site.baseurl | append : page.gif}} alt="{{page.title}}">
         <!--<div class="page-share">-->
             <!--<a href="https://twitter.com/intent/tweet?text={{ page.title }}&url={{ site.url }}{{ page.url }}" title="Share on Twitter" rel="nofollow" target="_blank">Twitter</a>
         <a href="https://facebook.com/sharer.php?u={{ site.url }}{{ page.url }}" title="Share on Facebook" rel="nofollow" target="_blank">Facebook</a>
