--- a/_includes/pagination.html
+++ b/_includes/pagination.html
@@ -1,5 +1,5 @@
-<!-- <div class="container">
-  <nav class="pagination" role="pagination">
+ <div class="container">
+  <nav class="pagination" role="pagination"><!--·ÖÒ³Æ÷-->
     <ul>
       {% if paginator.previous_page %}
         {% if paginator.previous_page == 1 %}
@@ -19,4 +19,4 @@
     </ul>
   </nav>
 </div>
- -->
+ 
