--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -775,14 +775,14 @@ html {
 body {
     font-family: 'Lato', sans-serif;
     color: #515151;
-    /*background-color: #FF6347 ;*/ /*#fbfbfb*/
+    background-color: #FF6347 ;/* #fbfbfb*/
 
-    background-image: url("i-rest.gif"); /* # Ìæ»»ÎªÄãµÄ GIF Í¼Ïñ    URL*/
+    /*background-image: url("i-rest.gif");*/ /* # Ìæ»»ÎªÄãµÄ GIF Í¼Ïñ    URL*/
 
-    background-position: center;
+    /*background-position: center;
     background-size: cover;
     height: 100vh;
-    padding: 0;
+    padding: 0;*/
 
     margin: 0;
     -webkit-font-smoothing: antialiased;
