--- a/_includes/pagination.html
+++ b/_includes/pagination.html
@@ -1,6 +1,6 @@
- <!--<div class="container">
-  <nav class="pagination" role="pagination">--><!--·ÖÒ³Æ÷-->
-    <!--<ul>
+<!-- <div class="container">
+  <nav class="pagination" role="pagination">
+    <ul>
       {% if paginator.previous_page %}
         {% if paginator.previous_page == 1 %}
         <p><a class="newer-posts" href="{{ site.baseurl }}/"><i class="fa fa-long-arrow-left" aria-hidden="true"></i></a></p>
@@ -18,5 +18,5 @@
       {% endif %}
     </ul>
   </nav>
-</div>-->
- 
+</div>
+ -->
