--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -775,19 +775,7 @@ html {
 body {
     font-family: 'Lato', sans-serif;
     color: #515151;
-<<<<<<< HEAD
-    background-color: #FF6347 ;/* #fbfbfb*/
-
-    /*background-image: url("i-rest.gif");*/ /* # ÃÊªªŒ™ƒ„µƒ GIF ÕºœÒ    URL*/
-
-    /*background-position: center;
-    background-size: cover;
-    height: 100vh;
-    padding: 0;*/
-
-=======
     background-color: #FF6347 ;/*#fbfbfb*/
->>>>>>> parent of 5253837 (Update main.css)
     margin: 0;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -925,27 +913,27 @@ table tfoot td {
 
 /* - - - - - - - - - - Home Page Styles - - - - - - - - - - */
 .sidebar {
-    display: -webkit-box;
-    display: -webkit-flex;/*¥Û∏≈ «≤‡±ﬂ¿∏*/
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    -webkit-box-pack: justify;
-    -webkit-justify-content: space-between;
-    -ms-flex-pack: justify;
-    justify-content: space-between;
-    position: fixed;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    width: 240px;
-    height: 100%;
-    padding: 20px 10px;
-    background-color: #191970; /*#ffffff;*/
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  width: 240px;
+  height: 100%;
+  padding: 20px 10px;
+  background-color: #ffffff;
 }
 
 .about {
@@ -954,13 +942,13 @@ table tfoot td {
 }
 
 .about .cover-author-image {
-        width: 100px;
-        height: 100px;
-        margin: 0 auto 10px;
-        -webkit-border-radius: 100%;
-        border-radius: 100%;
-        overflow: hidden;
-        background-color: #87CEFA;/*#333030*/
+  width: 100px;
+  height: 100px;
+  margin: 0 auto 10px;
+  -webkit-border-radius: 100%;
+          border-radius: 100%;
+  overflow: hidden;
+  background-color: #333030;
 }
 
 .about img {
@@ -980,31 +968,31 @@ table tfoot td {
           transform: scale3d(0.9, 0.9, 1);
 }
 
-    .about .author-name {
-        font-family: 'PT Serif', serif;
-        margin: 0 0 10px;
-        position: relative;
-        padding-bottom: 15px;
-        font-size: 16px;
-        text-transform: uppercase;
-        color: #FFFFFF;/*#333030*/
-        font-weight: 700;
-    }
+.about .author-name {
+  font-family: 'PT Serif', serif;
+  margin: 0 0 10px;
+  position: relative;
+  padding-bottom: 15px;
+  font-size: 16px;
+  text-transform: uppercase;
+  color: #333030;
+  font-weight: 700;
+}
 
 .about .author-name::after {
-            content: "";
-            position: absolute;
-            left: 50%;
-            -webkit-transform: translateX(-50%);
-            -ms-transform: translateX(-50%);
-            transform: translateX(-50%);
-            bottom: 0;
-            display: block;
-            width: 7px;
-            height: 7px;
-            -webkit-border-radius: 100%;
-            border-radius: 100%;
-            background-color: #6495ED;/*#515151*/
+  content: "";
+  position: absolute;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+      -ms-transform: translateX(-50%);
+          transform: translateX(-50%);
+  bottom: 0;
+  display: block;
+  width: 7px;
+  height: 7px;
+  -webkit-border-radius: 100%;
+          border-radius: 100%;
+  background-color: #515151;
 }
 
 .about p {
