--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,9 +23,11 @@ layout: main
     <div class="page-footer">
 
         <!--<img src="{{ '/assets/img/i-rest.gif' | prepend: site.baseurl }}" alt="GIF Image">-->
+
+
         <!--<img class="page-image" src="/assets/img/row/i-rest.gif" alt="{{page.title}}">-->
-        <!--<link rel="apple-touch-icon" href="{{ "/assets/img/favicon/apple-touch-icon.png" | prepend: site.baseurl }}"²Î¿¼>-->
-        <img src={{ "/assets/img/row/i-rest.gif" | prepend: site.baseurl }} alt="{{page.title}}">
+
+        <img src={{ "/assets/img/row/" | prepend: site.baseurl | append : page.img}} alt="{{page.title}}">
         <!--<div class="page-share">-->
         <!--<a href="https://twitter.com/intent/tweet?text={{ page.title }}&url={{ site.url }}{{ page.url }}" title="Share on Twitter" rel="nofollow" target="_blank">Twitter</a>
     <a href="https://facebook.com/sharer.php?u={{ site.url }}{{ page.url }}" title="Share on Facebook" rel="nofollow" target="_blank">Facebook</a>
