--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -939,7 +939,7 @@ table tfoot td {
     background-repeat: no-repeat;
     background-position: center;
 
-    background-color: #191970; /*#ffffff*/
+    /*background-color: #191970;*/ /*#ffffff*/
 }
 
 .about {
@@ -954,7 +954,7 @@ table tfoot td {
   -webkit-border-radius: 100%;
           border-radius: 100%;
   overflow: hidden;
-  background-color: #333030;
+  background-color: #FFC125;/*µ×Æ¬ÑÕÉ«*/
 }
 
 .about img {
