--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -988,7 +988,7 @@ table tfoot td {
   padding-bottom: 15px;
   font-size: 16px;
   text-transform: uppercase;
-  color: #333030;
+  color: 	#F8F8FF;/*#333030*/
   font-weight: 700;
 }
 
