--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -778,7 +778,7 @@ body {
     /*background-color: #FF6347;*/ /*#fbfbfb*/
 
 
-    background-image: url('i-rest.gif'); /* Ìæ»»ÎªÄãµÄÍ¼Æ¬ URL */
+    background-image: url('frist.jpg'); /* Ìæ»»ÎªÄãµÄÍ¼Æ¬ URL */
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
