--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -775,13 +775,13 @@ html {
 body {
     font-family: 'Lato', sans-serif;
     color: #515151;
-    /*background-color: #FF6347;*/ /*#fbfbfb*/
+    background-color: #1B258B;/* #fbfbfb*/
 
 
-    background-image: url('frist.jpg'); /* Ìæ»»ÎªÄãµÄÍ¼Æ¬ URL */
-    background-size: cover;
+    /*background-image: url('frist.jpg');*/ /* Ìæ»»ÎªÄãµÄÍ¼Æ¬ URL */
+    /*background-size: cover;
     background-repeat: no-repeat;
-    background-position: center;
+    background-position: center;*/
 
     margin: 0;
     -webkit-font-smoothing: antialiased;
