--- a/_includes/head.html
+++ b/_includes/head.html
@@ -87,11 +87,11 @@
 	<link rel="stylesheet" href="{{ "/assets/css/main.css" | prepend: site.baseurl }}">
 </head>
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-BNL4XHR36F"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-HBXD94BR3J"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-BNL4XHR36F');
+  gtag('config', 'G-HBXD94BR3J');
 </script>
